# devoir2_maestracci_marcelin

./: README.md  data.txt  fonctions.py  imprimer_energies.py  pyproject.toml  rapport.ipynb  test_epsilon_E0E1.py  test_epsilon_E0N.py  test_epsilon_gregory.py  test_hamiltonien_3.py
