[tool.poetry]
name = "devoir2-maestracci-marcelin"
version = "0.1.0"
description = ""
authors = ["Nathan MAESTRACCI <maestracnathan@gmail.com>"]
readme = "README.md"
packages = [{include = "devoir2_maestracci_marcelin"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplotlib = "^3.7.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
